@@ -22,6 +22,20 @@
 * ignore Enter against dialog.
 * `last 7 days` is not `last week`
 
+## 5.8.4 (2026-05-08)
+
+- level up weekly typing threshold.
+- stop warning message by giving following jvm-opts;
+
+```
+  :jvm-opts    ["--add-opens=java.base/java.nio=ALL-UNNAMED"
+                "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
+                "--enable-native-access=ALL-UNNAMED"
+                "--sun-misc-unsafe-memory-access=allow"]
+```
+## 5.8.2 (2026-04-24)
+
+- increment `threshold-points` by 1000 weekly.
 
 ## 5.8.1 (2026-04-20)
 
